--- a/src/app/features/content-creation/new-workout/new-workout.component.html
+++ b/src/app/features/content-creation/new-workout/new-workout.component.html
@@ -7,13 +7,16 @@
       <div class="formWrapper">
         <div #fileInputWrapper id="file-input-wrapper">
           <label class="file-input-default-image-label" *ngIf="!this.url" for="file-input">
-            <img class="file-input-default-image" src="../../../../assets/pictures/menuButtons/workoutCreation/pictureIconBlack.svg"/>
+            <img class="file-input-default-image"
+                 src="../../../../assets/pictures/menuButtons/workoutCreation/pictureIconBlack.svg"/>
           </label>
           <input #fileInput id="file-input" type="file" (change)="selectFile($event)"/>
 
-          <img *ngIf="this.url" (click)="this.removeImage()" class="close-cross-for-picture" src="../../../../assets/pictures/menuButtons/workoutCreation/close-button.svg"/>
+          <img *ngIf="this.url" (click)="this.removeImage()" class="close-cross-for-picture"
+               src="../../../../assets/pictures/menuButtons/workoutCreation/close-button.svg"/>
           <img #inputImage class="file-input-image-landscape" *ngIf="this.url" [src]="this.url" cdkDrag
-               (cdkDragEnded)="this.dragTheImage($event)" appSetImageSize [cdkDragFreeDragPosition]="dragPosition.toCdkDragFreeDragPosition()" (load)="this.canvasDrawing()">
+               (cdkDragEnded)="this.dragTheImage($event)" appSetImageSize
+               [cdkDragFreeDragPosition]="dragPosition.toCdkDragFreeDragPosition()" (load)="this.canvasDrawing()">
 
         </div>
 
@@ -26,24 +29,53 @@
           </div>
 
           <div *ngIf="this.days[this.selectedDay]">
-            <div *ngFor="let phase of this.days[this.selectedDay].phases; index as i" class="phase-container">
+            <div *ngFor="let phase of this.days[this.selectedDay].phases; index as phasePosition"
+                 class="phase-container">
               <div class="phase-top-Bar">
                 <div ngbDropdown class="d-inline-block">
-                  <button class = "phase-toggle-button" ngbDropdownToggle>{{phase.name}}</button>
+                  <button class="phase-toggle-button" ngbDropdownToggle>{{phase.name}}</button>
                   <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                    <button *ngFor="let phaseFromAllPhases of this.allPhases" (click)="this.selectPhase(i, phaseFromAllPhases)" ngbDropdownItem>{{phaseFromAllPhases.name}}</button>
+                    <button *ngFor="let phaseFromAllPhases of this.allPhases"
+                            (click)="this.selectPhase(phasePosition, phaseFromAllPhases)"
+                            ngbDropdownItem>{{phaseFromAllPhases.name}}</button>
                   </div>
                 </div>
               </div>
               <div class="exercises-container">
 
-                <div *ngIf="this.days[this.selectedDay].phases[i]">
-                  <div class="single-exercise-container" *ngFor="let exercise of this.days[this.selectedDay].phases[i].exercises">
-                  <p class="text-center" >
-                    {{exercise.name}}</p>
+                <div *ngIf="this.days[this.selectedDay].phases[phasePosition]">
+                  <div class="single-exercise-container"
+                       *ngFor="let exercise of this.days[this.selectedDay].phases[phasePosition].exercises; index as exercisePosition"
+                       (click)="this.openExercise(exercisePosition, phasePosition)">
+                    <p class="text-center">
+                      {{exercise.name}}
+                    </p>
+                    <div
+                      *ngIf="this.expandedExercise.exerciseNumber === exercisePosition && this.expandedExercise.phaseNumber === phasePosition">
+                      <p>User Entries</p>
+                      <input type="radio" name="userInputRequired" (click)="setUserRequired(exercise, false)"> No
+                      <input type="radio" name="userInputRequired" (click)="setUserRequired(exercise, true)"> Yes
+                      <br/>
+                      <br/>
+                      <br/>
+                      <div *ngIf="exercise.userEntryRequired === true">
+                        <p>exercise type</p>
+                        <input type="radio" name="exerciseType" (click)="setTimeBased(exercise, false)"> holding
+                        <input type="radio" name="exerciseType" (click)="setTimeBased(exercise, true)"> repetitions
+                        <br/>
+                        <br/>
+                        <br/>
+                        <p>weight</p>
+                        <input type="radio" name="weight" (click)="setWeightIncluded(exercise, false)"> No
+                        <input type="radio" name="weight" (click)="setWeightIncluded(exercise, true)"> Yes
+                      </div>
+                      <input *ngIf="exercise.userEntryRequired === false"
+                             class="time_input" type="number" (change)="this.setTimeLength($event, exercise)">
+                    </div>
                   </div>
                 </div>
-                <button class="add-button margin-center" (click)="this.goToExerciseSelector(i);">Exercise</button>
+                <button class="add-button margin-center" (click)="this.goToExerciseSelector(phasePosition);">Exercise
+                </button>
               </div>
             </div>
           </div>
@@ -54,7 +86,7 @@
           </div>
 
         </div>
-        <div class = "next-button-wrapper">
+        <div class="next-button-wrapper">
           <button class="next-button" [disabled]="!this.saveWorkoutService.file" (click)="upload()">
             Create
           </button>
