--- a/src/app/features/workout-player/tables.component.css
+++ b/src/app/features/workout-player/tables.component.css
@@ -67,8 +67,19 @@
 .lastTwoSetsContainer {
   position: absolute;
   background-color: #0e1013;
-  display: flex;
   height: 100px;
+}
+.time-container {
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.clock {
+  color: antiquewhite;
+  font-size: 2em;
+  -webkit-text-stroke: 1px black;
 }
 @media (max-width: 767px) {
   .content-div-media-specific {
