--- a/src/app/features/content-creation/new-workout/exercise-picker/exercise-picker.component.css
+++ b/src/app/features/content-creation/new-workout/exercise-picker/exercise-picker.component.css
@@ -1,27 +1,130 @@
 .filter-container {
   width: 100%;
-  height: 100px;
+  max-width: 1000px;
+  height: 300px;
+  background-color: white;
   display: flex;
-  border: solid black 1px;
-  margin-top: 50px;
+  flex-direction: column;
+  margin-top: 10px;
+  position: fixed;
+  overflow: hidden;
 }
-.exercise-container {
+
+.single-exercise-container {
   width: 300px;
   height: 100px;
   border-bottom: solid black 1px;
-  display:flex;
+  display: flex;
   margin: auto;
 }
+
 .text-center-p {
-  margin: auto;
-  margin-left: auto;
-  margin-right: auto;
+  width: calc(100% - 50px);
+  margin-top: auto;
+  margin-bottom: auto;
+  text-align: left;
 }
-.ok-button {
-  margin: auto;
-  width: 80px;
-  height: 50px;
-}
+
 .gray {
   background-color: lightslategray;
+}
+
+.expanded-to-content {
+  height: auto;
+  border: solid black 1px;
+}
+
+.collapsed-to-button {
+  height: 0px;
+  border: none;
+}
+
+.all-exercises-container {
+  width: 100%;
+  margin-top: 120px;
+}
+
+.filterGroupContainer {
+  width: 100%;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.filterGroupTitle {
+  text-align: center;
+  margin-bottom: 3px;
+  font-weight: bold;
+}
+
+.single-filters-container {
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
+.single-filter-span {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: solid black 1px;
+  border-radius: 7px;
+  background-color: lightblue;
+  cursor: pointer;
+}
+
+.filter-button-wrapper {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.filter-expansion-button {
+  margin-left: 20px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.ok-button-wrapper {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.ok-button {
+  margin-right: 20px;
+  background-color: #030c03;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  margin-left: auto;
+  margin-top: 10px;
+  width: 80px;
+}
+
+.button-wrapper {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  max-width: 1000px;
+  margin-top: 10px;
+}
+
+.active-filter {
+  background-color: lightblue;
+}
+
+.inactive-filter {
+  background-color: transparent;
+}
+
+.exercise-image {
+  margin-bottom: auto;
+  margin-top: auto;
+  width: 50px;
+  height: 50px;
 }
