--- a/src/app/features/content-creation/new-workout/new-workout.component.html
+++ b/src/app/features/content-creation/new-workout/new-workout.component.html
@@ -60,8 +60,8 @@
                       <br/>
                       <div *ngIf="exercise.userEntryRequired === true">
                         <p>exercise type</p>
-                        <input type="radio" name="exerciseType" (click)="setTimeBased(exercise, false)"> holding
-                        <input type="radio" name="exerciseType" (click)="setTimeBased(exercise, true)"> repetitions
+                        <input type="radio" name="exerciseType" (click)="setTimeBased(exercise, true)"> holding
+                        <input type="radio" name="exerciseType" (click)="setTimeBased(exercise, false)"> repetitions
                         <br/>
                         <br/>
                         <br/>
