--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -22,7 +22,7 @@
             <img class="link-images" alt="home" src="../../../assets/pictures/menuButtons/dumbbell.svg">
           </a>
 
-          <a class="d-inline-block  nav-link-menu" routerLink="" routerLinkActive="active">
+          <a class="d-inline-block  nav-link-menu" routerLink="/friends" routerLinkActive="active">
             <img class="link-images" alt="home" src="../../../assets/pictures/menuButtons/menuFriends.svg">
           </a>
           <a class="d-inline-block  nav-link-menu" routerLink="/content-creation" routerLinkActive="active">
