simple post creation

--- a/src/app/features/content-creation/content-creation.component.html
+++ b/src/app/features/content-creation/content-creation.component.html
@@ -1,9 +1,11 @@
 <app-menu></app-menu>
 <div class="post-type-frame">
   <div class="simple-post-frame">
+    <a class="imageLink" routerLink='../workoutoverview/workout/simple-post'>
     <img class="post-type-image simple-post-image"
          src="../../../../assets/pictures/menuButtons/workoutCreation/simple-post.svg">
     <p class="text-center"> simple post</p>
+    </a>
   </div>
   <div class="workout-post-frame">
     <a class="imageLink" routerLink='../workoutoverview/workout/new-workout'>
