--- a/src/app/features/workout-player/tables.component.html
+++ b/src/app/features/workout-player/tables.component.html
@@ -8,7 +8,7 @@
            (@blendOutTriggerRef.done)="this.videoBlendOutCallback($event)"
            [ngStyle]="this.view === VIEW.MobileLandscape && {'height' : '100%'} " class="video"
            [src]="this.currentVideoSrc"
-           id='videoplayer' autoplay="autoplay" loop>
+           id='videoplayer' autoplay="autoplay" loop muted>
     </video>
 
 
