responsivness of decison icons

--- a/src/app/features/content-creation/content-creation.component.html
+++ b/src/app/features/content-creation/content-creation.component.html
@@ -1,16 +1,20 @@
 <app-menu></app-menu>
-<div class="post-type-frame">
-  <div class="simple-post-frame">
-    <a class="imageLink" routerLink='../workoutoverview/workout/simple-post'>
-    <img class="post-type-image simple-post-image"
-         src="../../../../assets/pictures/menuButtons/workoutCreation/simple-post.svg">
-    <p class="text-center"> simple post</p>
-    </a>
-  </div>
-  <div class="workout-post-frame">
-    <a class="imageLink" routerLink='../workoutoverview/workout/new-workout'>
-      <img class="post-type-image workout-post-image" src="../../../../assets/pictures/menuButtons/dumbbell.svg">
-      <p class="text-center"> workout </p>
-    </a>
+<div class="d-flex justify-content-center content-wrapper">
+  <div class="content-div">
+    <div class="post-type-container">
+      <div class="single-post-container">
+        <a class="imageLink" routerLink='../workoutoverview/workout/simple-post'>
+          <img class="post-type-image"
+               src="../../../../assets/pictures/menuButtons/workoutCreation/simple-post.svg">
+          <p class="text-center"> simple post</p>
+        </a>
+      </div>
+      <div class="single-post-container">
+        <a class="imageLink" routerLink='../workoutoverview/workout/new-workout'>
+          <img class="post-type-image" src="../../../../assets/pictures/menuButtons/dumbbell.svg">
+          <p class="text-center"> workout </p>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
