--- a/src/app/features/content-creation/content-creation.component.css
+++ b/src/app/features/content-creation/content-creation.component.css
@@ -1,48 +1,27 @@
-.post-type-frame {
-  margin-top: 50px;
+.post-type-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 100%;
-  height: 70px;
-
 }
 
 .post-type-image {
-  margin: 0px;
-  padding: 0px;
-
-  width: auto;
+  width: 100%;
 }
 
-.workout-post-image {
-  height: 35px;
-}
-
-.simple-post-image {
-  margin-top: 7px;
-  margin-bottom: 3px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40px;
-}
-
-.workout-post-frame {
+.single-post-container {
+  width: 200px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
-  width: 10%;
-  margin-left: 10%;
   cursor: pointer;
 }
 
-.simple-post-frame {
-  display: flex;
-  flex-direction: column;
-  width: 10%;
-  margin-left: 35%;
-  cursor: pointer;
-}
 .imageLink {
   color: #111110;
   text-align: center;
-  width: fit-content;
-  margin: auto;
+  font-size: 2em;
+  text-decoration: none;
 }
