--- a/src/app/features/friends/friends.component.html
+++ b/src/app/features/friends/friends.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div class="d-flex justify-content-center content-wrapper">
   <div class="content-div">
-    <div class="single-user-container" *ngFor="let user of this.allUsers">
+    <div class="single-user-container single-user-container-width" *ngFor="let user of this.allUsers">
       <p class="user-name">{{user.name}} || {{user.id}} || {{user.email}}</p>
       <button class="follow-button" (click)="this.follow(user)" *ngIf="this.followsIds"
               [ngClass]="this.followsIds.includes(user.id)? 'black-button': 'white-button'"> follow
