--- a/src/app/features/workoutoverview/workoutoverview.component.css
+++ b/src/app/features/workoutoverview/workoutoverview.component.css
@@ -12,6 +12,9 @@
     box-sizing: border-box;
     overflow: hidden;
   }
+  .icon-text {
+    font-size: 1.5em;
+  }
 }
 @media (min-width: 768px) {
   .content-wrapper {
@@ -28,6 +31,9 @@
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
+  }
+  .icon-text {
+    font-size: 2.5em;
   }
 }
 .content-div {
@@ -113,15 +119,11 @@ height: 100%;
 a {
   text-decoration: none;
 }
-p {
+
+.groupBox p {
   margin: 0px;
   padding: 0px;
-  font-family: Roboto;
   font-size: 50px;
-  color: white;
-  text-decoration: none;
-  -webkit-text-stroke: 2px black;
-  -webkit-text-fill-color: white;
 }
 
 .create-or-search-page {
