--- a/src/app/features/workoutoverview/workoutoverview.component.html
+++ b/src/app/features/workoutoverview/workoutoverview.component.html
@@ -6,7 +6,7 @@
       <div class="search-and-create-wrapper">
         <a class="create-link" routerLink='workout/new-workout'>
           <div class="workoutcreation search-or-create-link">
-            <p class = "image-text">CREATE</p>
+            <p class = "icon-text black-white-text">CREATE</p>
             <img class="create-or-search-page" alt="home"
                  src="../../../assets/pictures/menuButtons/workout-preview-page/gym-dumbbell.svg">
           </div>
@@ -14,7 +14,7 @@
 
         <a class="search-link" routerLink="workout" [queryParams]="{criteria: '[]'}">
           <div class="workoutcreation search-div search-or-create-link">
-            <p class = "image-text">SEARCH</p>
+            <p class = "icon-text black-white-text">SEARCH</p>
             <img class="create-or-search-page" alt="home"
                  src="../../../assets/pictures/menuButtons/workout-preview-page/searchIcon.svg">
           </div>
@@ -23,7 +23,7 @@
       <a class="groupBox" routerLink="workout">
         <div class="workoutgroups">
           <div class="groupTextHolder">
-            <p>Saved Workouts</p>
+            <p class="black-white-text">Saved Workouts</p>
           </div>
           <div class="workoutgroupsinnderdivs">
             <ng-template [ngIf]="this.previewImages[0]">
