updates and image space reduction

--- a/src/app/features/content-creation/new-workout/new-workout.component.html
+++ b/src/app/features/content-creation/new-workout/new-workout.component.html
@@ -95,4 +95,4 @@
     </div>
   </div>
 </div>
-<canvas style="border: 1px solid black; display: none" #canvas></canvas>
+<canvas style="border: 1px solid black" #canvas></canvas>
