--- a/src/app/features/content-creation/simple-post/simple-post.component.html
+++ b/src/app/features/content-creation/simple-post/simple-post.component.html
@@ -35,5 +35,5 @@
     </div>
   </div>
 </div>
-<canvas style="border: 1px solid black; display: none" #canvas></canvas>
+<canvas style="border: 1px black solid" #canvas></canvas>
 
