--- a/src/app/features/workout-player/last-set/last-set.component.css
+++ b/src/app/features/workout-player/last-set/last-set.component.css
@@ -1,17 +1,4 @@
-.siteWrapper {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  border-right: solid black 1px;
-  border-top: solid black 1px;
-  border-bottom: solid black 1px;
-  overflow: auto;
-}
 .chart {
-  height: 100%;
-
-}
-.singleSetsContainer {
-
+  width: 500px;
+  height: 240px;
 }
