--- a/src/app/features/workout-player/kpi/kpi.component.html
+++ b/src/app/features/workout-player/kpi/kpi.component.html
@@ -1,6 +1,6 @@
 <div class="chart">
-  <h3>{{this.title}}</h3>
+  <h3>{{this.kpi.name}}</h3>
   <div class="kpi-wrapper">
-    <span>{{this.value}}</span>
+    <span>{{this.kpi.value}}</span>
   </div>
 </div>
