--- a/src/app/features/workout-player/next-exercise-preview/next-exercise-preview.component.css
+++ b/src/app/features/workout-player/next-exercise-preview/next-exercise-preview.component.css
@@ -1,12 +1,15 @@
 .chart {
   width: 300px;
   height: 240px;
-  border: 1px solid black;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
+  cursor: pointer;
 }
 .exercise-wrapper {
+  width: 100%;
+}
+.video {
   width: 100%;
 }
