--- a/src/app/features/workout-player/tables.component.css
+++ b/src/app/features/workout-player/tables.component.css
@@ -1,4 +1,4 @@
-.video {
+. video {
   position: absolute;
   top: 0;
   left: 0;
@@ -49,277 +49,82 @@
   border-right: solid black 1px;
 }
 
-.lastTwoSetsContainer {
-  position: absolute;
-  background-color: #0e1013;
+.video {
+  background-color: white;
+}
+
+.bright {
+  background-color: white;
+  filter: brightness(100%);
+  width: 1500px;
+  height: 3000px;
+  display: none;
+}
+
+.dark {
 
 }
 
 .time-container {
   width: 100px;
-  height: 50px;
+  height: 100px;
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 10px;
+  left: 10px;
 }
 
-.clock {
-  color: antiquewhite;
-  font-size: 2em;
-  -webkit-text-stroke: 1px black;
+.dashboard-container {
+  width: 1080px;
+  height: 750px;
+  position: absolute;
+  top: 50px;
+  left: 0px;
+  background-color: white;
 }
 
-@media (max-width: 450px) {
-
-  .content-div-media-specific {
-    width: 100%;
-    margin-top: 0px;
-    position: relative;
-  }
-
-  .showIfMobile {
-    background-color: #020122;
-    display: flex;
-    width: 100%;
-  }
-
-  .showIfNonMobile {
-    height: 0;
-    width: 0;
-    display: initial;
-  }
-
-  .nextButton {
-    color: white;
-    display: inline;
-    cursor: pointer;
-    margin-left: 100px;
-
-  }
-
-  .endButton {
-    color: white;
-    display: inline;
-    float: right;
-    margin-right: 100px;
-    cursor: pointer;
-
-  }
-
-  .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    overflow: auto;
-    align-items: center;
-    background-color: RGB(250, 250, 250);
-  }
-
-  .tableContainer {
-    width: 100%;
-    height: calc(100% - 60px);
-    display: flex;
-    flex-direction: row;
-  }
-
-  .exerciseTitleWrapper {
-    width: 100%;
-    height: 30px;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-
-  .exerciseTitle {
-    color: white;
-    margin: auto auto auto auto;
-    font-size: 1.5em;
-  }
-
-  .motherBoard {
-    width: 100%;
-    height: 30px;
-    padding: 0;
-    margin: 0;
-  }
+.content-div-media-specific {
+  width: 100%;
+  max-width: 1000px;
+  margin-top: 50px;
+  position: relative;
 }
 
-@media (min-width: 451px) and (max-height: 750px) {
-
-
-  .content-div-media-specific {
-    width: 100%;
-    max-width: 1000px;
-    margin-top: 0px;
-    position: relative;
-  }
-
-  .showIfMobile {
-    height: 0;
-    width: 0;
-    display: none;
-  }
-
-  .showIfNonMobile {
-    height: 100%;
-    width: 100%;
-  }
-
-  .nextButton {
-    color: white;
-    display: inline;
-    cursor: pointer;
-    margin-left: calc(50% + 100px);
-    font-size: 1.3em;
-  }
-
-  .endButton {
-    color: white;
-    display: inline;
-    float: right;
-    margin-right: 100px;
-    cursor: pointer;
-    font-size: 1.3em;
-  }
-
-  .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: calc(100% - 35px);
-    align-items: center;
-    /*background-color: RGB(250, 250, 250);*/
-  }
-
-  .exerciseTitleWrapper {
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: row;
-    float: left;
-    position: relative;
-  }
-
-  .testclass {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .tableContainer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: row;
-    float: left;
-    position: relative;
-  }
-
-  .motherBoard {
-    width: 100%;
-    height: 10%;
-    padding: 0;
-    margin: 0;
-
-  }
-
-  .exerciseTitle {
-    color: white;
-    margin: auto auto auto auto;
-    font-size: 1.3em;
-  }
-
-  .setDisplay-wrapper-common {
-    position: absolute;
-    top: 0px;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    /*height: calc(100% - 160px);
-    width: 100%;*/
-    border: solid black 1px;
-    background-color: #111110;
-  }
+.showIfMobile {
+  height: 0;
+  width: 0;
+  display: none;
 }
 
-@media (min-height: 751px) {
-
-  .content-div-media-specific {
-    width: 100%;
-    max-width: 1000px;
-    margin-top: 50px;
-    position: relative;
-  }
-
-  .showIfMobile {
-    height: 0;
-    width: 0;
-    display: none;
-  }
-
-  .showIfNonMobile {
-    height: 100%;
-    width: 100%;
-  }
-
-  .nextButton {
-    color: white;
-    display: inline;
-    cursor: pointer;
-    margin-left: calc(50% + 100px);
-    font-size: 1.5em;
-  }
-
-  .endButton {
-    color: white;
-    display: inline;
-    float: right;
-    margin-right: 100px;
-    cursor: pointer;
-    font-size: 1.5em;
-  }
-
-  .content-wrapper {
-    display: flex;
-    flex-direction: row;
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: calc(100% - 35px);
-    position: relative;
-    /*background-color: RGB(250, 250, 250);*/
-  }
-
-  .tableContainer {
-    width: 100%;
-    height: 84%;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .exerciseTitleWrapper {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-
-  .exerciseTitle {
-    color: white;
-    margin: auto auto auto auto;
-    font-size: 1.5em;
-  }
-
-  .motherBoard {
-    width: 100%;
-    height: 6%;
-    padding: 0;
-    margin: 0;
-  }
+.showIfNonMobile {
+  height: 100%;
+  width: 100%;
 }
+
+
+
+.content-wrapper {
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: calc(100% - 35px);
+  position: relative;
+  /*background-color: RGB(250, 250, 250);*/
+}
+
+.tableContainer {
+  width: 100%;
+  height: 84%;
+  display: flex;
+  flex-direction: row;
+}
+
+
+
+.motherBoard {
+  width: 100%;
+  position: absolute;
+  top: 800px;
+}
+
