--- a/src/app/features/workout-player/tables.component.html
+++ b/src/app/features/workout-player/tables.component.html
@@ -4,61 +4,19 @@
   <div #contentDiv [ngClass]="this.fullscreen === true ? 'full-screen' : 'content-div-media-specific'"
        [ngStyle]="this.fullscreen !== true && {'height': this.paddingForContent}">
 
-    <video #videoPlayer *ngIf="currentVideoSrc !== null" [@blendOutTriggerRef]="this.videoBlendOutTrigger"
-           (@blendOutTriggerRef.done)="this.videoBlendOutCallback($event)"
-           [ngStyle]="this.view === VIEW.MobileLandscape && {'height' : '100%'} " class="video"
-           [src]="this.currentVideoSrc"
-           id='videoplayer' autoplay="autoplay" loop muted>
-    </video>
+    <app-video-player [videoHandler]="this"></app-video-player>
 
 
-    <div #lastSetContainer [@lastSetContainerTriggerRef]="this.lastSetContainerBlendOutTrigger"
-         class="lastTwoSetsContainer"
-         [ngStyle]="{'top': (this.lastSetContainerPosition - 80), 'left': 20, 'display': lastSetContainerDisplay}"
-         *ngIf="currentVideoSrc !== null && this.currentExercise.setsContainer.length > 0">
-      <div class="singleSetsContainer">
-        <p class="text-center text-white">Your last set</p>
-        <p
-          class="text-center text-white">{{this.currentExercise.setsContainer[this.currentExercise.setsContainer.length - 1]?.timeOfExercise.toDateString()}}</p>
-        <p class="text-center text-white"
-           *ngFor="let exerciseSet of this.currentExercise.setsContainer[this.currentExercise.setsContainer.length-1]?.exerciseSets">{{exerciseSet.repetitions}}
-          X {{exerciseSet.weight}} Kg</p>
-      </div>
-    </div>
-
-    <div [ngStyle]="{ 'width.px': this.videoPanelWidth, 'height': this.videoPanelHeight}" #entryPanel
-         *ngIf="showEntryPanel" class="setDisplay-wrapper-common">
-      <div class="exerciseTitleWrapper">
-        <h3 class="exerciseTitle" *ngIf="this.getCurrentExercise()">{{this.getCurrentExercise().name}} </h3>
-      </div>
 
 
-      <div class="tableContainer">
-
-        <div class="setContainer">
-          <app-last-set class="setDisplayComponents lastSetComponent"
-                        [currentExercise]="this.getCurrentExercise()"></app-last-set>
-        </div>
-        <div class="showIfNonMobile">
-          <app-current-set class="setDisplayComponents" [currentExercise]="this.getCurrentExercise()"></app-current-set>
-        </div>
-
-      </div>
-
-      <div class="motherBoard">
-        <h3 class="endButton" (click)="this.endWorkout()">end</h3>
-        <h3 class="nextButton" [ngStyle]="{'color': this.isLastExerciseOfDayWorkout() ? 'grey': 'white'}"
-            (click)="this.nextExercise()">next</h3>
-      </div>
-
-      <div [ngStyle]="{'height': this.mobileEntryPanelHeight}" class="showIfMobile">
-        <app-current-set class="setDisplayComponents" [currentExercise]="this.getCurrentExercise()"></app-current-set>
-      </div>
-
-    </div>
 
     <div *ngIf="this.currentExercise?.userEntryRequired === false" class="time-container">
-      <span class=clock>{{this.timeCounter}} </span>
+      <app-remaining-time-chart [timeLeft]="this.timeCounter"
+                                [totalTime]="this.currentExercise.timeLength"></app-remaining-time-chart>
+    </div>
+
+    <div *ngIf="this.showEntryPanel === true" class="dashboard-container">
+      <app-dashboard [tablesComponent]="this" [currentDayWorkout]="currentDayWorkout" [currentExercise]="currentExercise"></app-dashboard>
     </div>
 
   </div>
