--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="ndiv-5 col-1 col-xs-1 col-sm-1 col-md-2 col-lg-2  h-100 nav-div-4 nav-div d-flex justify-content-end">
-        <a class="profile nav-link-menu profile-link" (click)="openCloseSideNavigation(); logout()" routerLink="" routerLinkActive="active">
+        <a class="profile nav-link-menu profile-link" routerLink="/profile" routerLinkActive="active">
           <img class="link-images profile-link" alt="home" src="../../../assets/pictures/menuButtons/menuProfil.svg">
         </a>
       </div>
