--- a/src/app/features/home/management.component.html
+++ b/src/app/features/home/management.component.html
@@ -23,11 +23,12 @@
     -->
     <div *ngFor="let post of this.postListings; index as i" class="workoutsContainer">
       <div *ngIf="post.simplePost != null" class = "centerContent frame-content">
-
+        <img [src]="this.saveUrl(post.simplePost.userDTO.profileImageSmall)">
         <img [src]="this.saveUrl(post.simplePost.previewImage)" class="centerContent imageLimiter img-thumbnail">
         <p>{{post.simplePost.description}}</p>
       </div>
       <div *ngIf="post.workout != null" class = "centerContent frame-content">
+        <img [src]="this.saveUrl(post.workout.creator.profileImageSmall)">
         <h2 class="centerContent"
             style="text-align: center;">{{post.workout.name}}</h2>
         <img class="centerContent imageLimiter img-thumbnail"
